# cross-messenger

./: LICENSE  README.md  bun.lockb  package.json
src/: App.tsx  ipc.ts
src-tauri/: Cargo.toml  build.rs  ipc.wit  tauri.conf.json
src-tauri/src/: actions.rs  commands.rs  dataplist.rs  emulated.rs  imessage.rs  ipc.rs  main.rs  state.rs
src-tauri/src/actions/: init.rs  send.rs
src-tauri/src/emulated/: README.md  bindings.c  bindings.rs  jelly.rs  mparser.rs  nac.c  nac.rs
src-tauri/src/emulated/pypush/: jelly.py  mparser.py  nac.py
src-tauri/src/imessage/: messenger.rs  user.rs
src-tauri/src/state/: rustpushstate.rs
src/chat/: ChatWindow.tsx  LoginField.tsx
