[package]
name = "cross-messenger"
version = "0.0.1"
description = "A Tauri GUI for iMessage"
authors = ["Tag Howard"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
tauri-bindgen-gen-guest-ts = { version = "0.2.0", path = "../../tauri-bindgen/crates/gen-guest-ts" }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [] }
tauri-bindgen-host = { version = "0.2.0", path = "../../tauri-bindgen/crates/host" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rustpush does not have a published crate yet, so we use a relative path
rustpush = { path = "../../rustpush" }
openssl = { version = "0.10.56", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
reqwest = { version = "0.11", features = [
  "json",
  "rustls-tls",
  "gzip",
  "stream",
] }
base64 = "0.21.2"
log = "0.4.20"
pyo3 = { version = "0.20.0", features = ["abi3", "serde"] }
dirs = "5.0.1"
plist = "1.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/main.rs"
